# M8SampleFormatter

./: .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  Package.swift  QUICKSTART.md  README.md  install_m8_formatter.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  test.yml
scripts/: build_app_bundle.sh  build_complete.sh  create_release.sh  create_simple_dmg.sh  install_m8_formatter.sh  run_tests.sh
src/cpp/: main.cpp
src/cpp/audio/: AppleSiliconProcessor.cpp  AppleSiliconProcessor.h  AudioProcessor.cpp  AudioProcessor.h
src/cpp/filesystem/: FileOperations.cpp  FileOperations.h  FileScanner.cpp  FileScanner.h  PathManager.cpp  PathManager.h
src/cpp/utils/: Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h
src/swift/M8FormatterGUI/: ContentView.swift  M8FormatterBackend.swift  ProcessingViewModel.swift  main.swift
test_build/: M8SampleFormatter
test_build/tests/cpp/: m8_formatter_tests
tests/cpp/: CMakeLists.txt  test_audio_processor.cpp  test_file_scanner.cpp  test_main.cpp  test_path_manager.cpp
tests/fixtures/: create_minimal_audio_files.sh  create_simple_fixtures.sh  create_test_fixtures.sh
tests/fixtures/input/: config.json  test1.aiff
tests/fixtures/input/subfolder/: readme.txt
tests/swift/: M8FormatterGUITests.swift
